Add examples to swagger